--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   textfield_search: ^0.10.0
   carousel_slider: ^4.1.1
   cached_network_image: ^3.2.2
+  faker: ^2.0.0
+
+  card_swiper: ^2.0.4
 
 dev_dependencies:
   flutter_test:
