--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   faker: ^2.0.0
 
   card_swiper: ^2.0.4
+  expandable_text: ^2.3.0
+  quantity_input: ^1.0.2
+  rounded_loading_button: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -66,10 +69,22 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
+    - assets/fonts/
+    - assets/fonts/open-sans/
   #   - images/a_dot_ham.jpeg
-
+  fonts:
+    - family: Opensans
+      fonts:
+        - asset: assets/fonts/open-sans/OpenSans-Light.ttf
+          weight: 300
+        - asset: assets/fonts/open-sans/OpenSans-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/open-sans/OpenSans-Semibold.ttf
+          weight: 700
+        - asset: assets/fonts/open-sans/OpenSans-ExtraBold.ttf
+          weight: 800
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -81,7 +96,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
