--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   expandable_text: ^2.3.0
   quantity_input: ^1.0.2
   rounded_loading_button: ^2.1.0
+  splash_screen_view: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -71,9 +72,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/images/
     - assets/fonts/
     - assets/fonts/open-sans/
   #   - images/a_dot_ham.jpeg
+
+
   fonts:
     - family: Opensans
       fonts:
@@ -110,3 +114,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+splash_screen_view:
+  color: "#ffffff"
+  background_image: "assets/images/logo.png"
