--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,9 @@ dependencies:
   expandable_text: ^2.3.0
   quantity_input: ^1.0.2
   rounded_loading_button: ^2.1.0
-  splash_screen_view: ^3.0.0
+  intro_screen_onboarding_flutter: ^1.0.0
+  flutter_native_splash: ^2.2.9
+  dropdown_button2: ^1.7.2
 
 dev_dependencies:
   flutter_test:
@@ -114,6 +116,12 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-splash_screen_view:
+flutter_native_splash:
   color: "#ffffff"
-  background_image: "assets/images/logo.png"
+  image: assets/images/logo.png
+
+  android_12:
+    image: assets/images/logo.png
+    icon_background_color: "#ffffff"
+
+
