--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   provider: ^6.0.3
   flutter_cart: ^0.0.7
   line_awesome_flutter: ^2.0.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
