--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_cart: ^0.0.7
   line_awesome_flutter: ^2.0.0
   equatable: ^2.0.5
+  flutter_credit_card: ^3.0.3
 
 dev_dependencies:
   flutter_test:
